WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59559
Fix incorrect use of OwnPtr<T*> in GCActivityCallback
https://bugs.webkit.org/show_bug.cgi?id=59559
Summary
Fix incorrect use of OwnPtr<T*> in GCActivityCallback
Adrienne Walker
Reported
2011-04-26 16:47:07 PDT
Fix incorrect use of OwnPtr<T*> in GCActivityCallback
Attachments
Patch
(1.18 KB, patch)
2011-04-26 16:47 PDT
,
Adrienne Walker
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrienne Walker
Comment 1
2011-04-26 16:47:27 PDT
Created
attachment 91180
[details]
Patch
Geoffrey Garen
Comment 2
2011-04-26 16:57:07 PDT
Comment on
attachment 91180
[details]
Patch r=me
Adrienne Walker
Comment 3
2011-04-26 17:06:56 PDT
Committed
r84986
: <
http://trac.webkit.org/changeset/84986
>
WebKit Review Bot
Comment 4
2011-04-26 18:08:17 PDT
http://trac.webkit.org/changeset/84986
might have broken Windows 7 Release (Tests) The following tests are not passing: fast/blockflow/Kusa-Makura-background-canvas.html fast/blockflow/border-vertical-lr.html fast/blockflow/fallback-orientation.html fast/blockflow/japanese-lr-selection.html fast/blockflow/japanese-lr-text.html fast/blockflow/japanese-rl-selection.html fast/blockflow/japanese-rl-text.html fast/blockflow/japanese-ruby-vertical-lr.html fast/blockflow/japanese-ruby-vertical-rl.html fast/dynamic/text-combine.html fast/repaint/japanese-rl-selection-clear.html fast/repaint/japanese-rl-selection-repaint.html fast/ruby/base-shorter-than-text.html fast/text/emphasis-vertical.html fast/text/international/text-combine-image-test.html fast/text/international/vertical-text-glyph-test.html fast/text/justify-ideograph-vertical.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug