2011-04-26  Adrienne Walker  <enne@google.com>

Reviewed by Geoffrey Garen.

        Fix incorrect use of OwnPtr<T*> in GCActivityCallback
        https://bugs.webkit.org/show_bug.cgi?id=59559

        * runtime/GCActivityCallback.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@84986 bbb929c8-8fbe-4397-9dbb-9b2b20218538