third_party/WebKit/Source/JavaScriptCore/runtime/GCActivityCallback.h
@@ -70,7 +70,7 @@ protected:
 #endif
 
 private:
-    OwnPtr<DefaultGCActivityCallbackPlatformData*> d;
+    OwnPtr<DefaultGCActivityCallbackPlatformData> d;
 };
 
 inline PassOwnPtr<DefaultGCActivityCallback> DefaultGCActivityCallback::create(Heap* heap)
